# SHawn-EvidenceMap

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  PUBLIC_STATUS.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  pilot-feedback.yml  pilot-map-request.yml  roadmap_task.yml
.github/workflows/: ci.yml  pages.yml
benchmarks/: README.md
benchmarks/results/: 2026-07-11-ecosystem-snapshot.json  2026-07-11-v0.2.3.json
docs/: CARTRIDGE_ARCHITECTURE.md  CLAIM_REVIEW_WORKFLOW.md  DATABASE_REFERENCE.md  ECOSYSTEM_COMPARISON_2026-07-11.md  INSTALLATION.md  LAUNCH_PLAN.md  MAINTAINER_EVIDENCE.md  MAINTAINER_WORKFLOW_PLAN.md  OPENAI_CODEX_OSS_APPLICATION.md  PILOT_OUTREACH_STRATEGY.md  PILOT_QUICKSTART.md  PUBLIC_BENCHMARK_2026-07-11.md  PUBLIC_BOUNDARY.md  PUBLIC_RELEASE_CHECKLIST.md  PUBLIC_REPO_PREP.md  REPORT_TEMPLATE.md  SOURCE_BOUNDARY.md  VERIFICATION.md
examples/: example_query.txt
examples/database_demo/: README.md
examples/outputs/: endometrial-organoid-implantation.md
examples/pilot/: dirty_records.csv
examples/reports/: ai_cs_llm_benchmark_dataset.md  bio_drug_screening_organoid_cancer.md  bio_endometrial_organoid_implantation.md  education_intervention_learning_outcomes.md  legal_ai_regulation_liability.md  patent_tech_crispr_landscape.md  policy_climate_intervention_evaluation.md
examples/reviews/: README.md  example-review.json
scripts/: build_pilot_demo.py  public_benchmark.py  public_safety_scan.py  public_safety_scan.sh
src/evidencemap/: __init__.py  _version.py  cache.py  cli.py  crossref.py  europepmc.py  export.py  models.py  openalex.py  pipeline.py  pubmed.py  quality_gate.py  report.py  review.py  visual_report.py
tests/: test_cartridges.py  test_claim_workflow.py  test_crossref.py  test_ecosystem_snapshot.py  test_europepmc.py  test_export_and_reports.py  test_interchange.py  test_openalex.py  test_pilot_launch.py  test_public_benchmark.py  test_public_metadata_demo.py  test_public_safety_scan.py  test_pubmed.py  test_quality_gate.py  test_refdb.py  test_refdb_cli.py  test_web_claim_workflow.py
web/: index.html  pilot.html  sample.html  server.py
web/assets/: pilot-demo-summary.json  (+4 more)
(+46 files in other folders)
